# debit

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: imgnav-gibson-debit.yaml
configs/debit/: debit_base.yaml  debit_dec.yaml  debit_defaults.yaml  debit_large.yaml  debit_small.yaml  debit_tiny.yaml
scripts/: extract_pretrained_croco_rpve.py  train_eval_ppo.py  train_ppo.py
src/debit/: policy.py
